syntax = "proto3";

package arrus.proto;

message DigitalBackplaneSettings {
    message Id {
        string manufacturer = 1;
        string name = 2;
    }
    Id model_id = 1;
}