syntax = "proto3";

package arrus.proto;

enum IOCapability {
    PROBE_CONNECTED_CHECK = 0;
}